--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -7,5 +7,8 @@ $faded_background: #e6fcfd;
 $dashboard_background: #ffffff;
 $dashboard_background_2: #cfcfff;
 $button_background: #000;
+$form_table_header_background: #555555;
+$form_table_header_text: #fff;
+
 $faded_line: rgb(204, 204, 204);
 $faded_text: rgb(77, 77, 77);
