--- a/resources/css/_Settings.scss
+++ b/resources/css/_Settings.scss
@@ -1,19 +1,28 @@
 .Settings {
     color: #fff;
-    
+
     ul {
         list-style: none;
         margin: 0.8em 0;
 
         li {
-            width: 15%;
-            border-bottom: 2px solid $faded_line;
-            padding: 4px 2px;
+            border-bottom: 1px solid darken($faded_line, 30);
+            padding: 8px 2px;
 
             a {
                 text-decoration: none;
                 color: #fff;
                 font-weight: bold;
+            }
+        }
+    }
+}
+
+@media screen and (width >=726px) {
+    .Settings {        
+        ul {
+            li {
+                width: 15%;
             }
         }
     }
