Forms: corrected the system navigation layout for most forms that had not been updated.

--- a/resources/css/__forms.scss
+++ b/resources/css/__forms.scss
@@ -18,10 +18,8 @@ $custom_form_padding: 24px;
             font-weight: bold;
         }
 
-        .navigation {
-            a {
-                color: lightblue;
-            }
+        .system_nav {
+            margin: unset!important;
         }
     }
 
