Students: Fixed the styles for the student's photo.

--- a/resources/css/_Student_Portal.scss
+++ b/resources/css/_Student_Portal.scss
@@ -16,6 +16,17 @@
     }
 
     .student_details {
+        .image {
+            width: 100px;
+            height: 100px;
+
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 8px;
+            }
+        }
         p {
             span {
                 &:last-of-type {
